style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  scroll-behavior: smooth;
  box-sizing: border-box;
  background-color: #333;
}

body {
  box-sizing: border-box;
  margin: auto;
  height: 100%;
  width: 100%;
  background-color: white;
  font-size: 20px;
  max-width: 1920px;
}

.navContainer {
  padding: 0 6.4%;
  padding-top: 0.5em;
  max-width: 100%;
  justify-content: space-between;
  animation: nav-intro 2s ease 1.2s 1 normal forwards;
  transform: translate(0, -80px);
}

@keyframes nav-intro {
  from { transform: translate(0, -80px); }
  to { transform: translate(0, 0); }
}

.hamburger {
  order: 1;
}

.navContainer ul {
  visibility: hidden;
}

.barItem {
  margin: 0;
  padding: 0;
}

.container h2 {
  font-style: normal;
  font-family: 'Inter', sans-serif;
  font-weight: 600;
  font-size: 5.33em;
  line-height: 7.46%;
  text-align: center;
}

.mainTitle {
  height: 100vh;
  width: 100%;
  background-image: url("./images/header-illsutration-mobile@2x.png");
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center top;
  animation: opacity 2s ease 0s 1 forwards;
  opacity: 0%;
}

@keyframes opacity {
  from { opacity: 0; }
  to { opacity: 1; }
}

p {
  text-align: center;
  font-family: 'Inter', sans-serif;
  font-weight: 400;
  font-size: 1em;
  line-height: 1.4em;
}

.tittleContainer {
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
}

.tittleContainer p {
  max-width: 920px;
}

/* Main page */
@media (min-width: 768px) {
  .navContainer {
    margin: 0;
  }

  .navContainer h2,
  div {
    display: none;
  }

  .navContainer ul {
    width: 100%;
    height: max-content;
    margin-top: 20px;
    list-style: none;
    visibility: visible;
    justify-content: center;
    align-items: center;
    font-family: 'Inter', sans-serif;
    font-size: 25px;
    font-weight: 800;
    color: #172b4d;
  }

  .navContainer ul li a {
    padding: 25px 25px;
    transition: background-color 0.5s ease;
  }

  .navContainer ul li a:link,
  :visited {
    text-decoration: none;
    color: #172b4d;
  }

  .navContainer ul li a:hover {
    background-color: #36b37f;
    border: none;
    box-shadow: 0 0 8px black;
    border-radius: 10px;
  }

  .mainTitle {
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center center;
    background-image: url("./images/Header-llustration-desktop@2x.svg");
  }

  .tittleContainer {
    justify-content: flex-start;
    gap: 2%;
    padding: 15% 15% 0;
  }
}

.title {
  text-align: center;
  font-size: 40px;
  font-weight: 700;
  font-style: normal;
  font-family: 'Inter', sans-serif;
  line-height: 52px;
}

.subtitle {
  text-align: center;
  font-size: 24px;
  font-weight: 600;
  font-style: normal;
  font-family: 'Inter', sans-serif;
  line-height: 32px;
}

.mediaContainer {
  list-style: none;
  gap: 1em;
  max-width: 200px;
  padding: 0;
  flex-direction: row;
  justify-content: space-around;
  align-items: baseline;
}

.mediaContainer img {
  transition: transform 0.3s;
}

.separator {
  background-color: #36b37f;
  width: 55px;
  height: 6px;
  margin: none;
  border: none;
  border-radius: 10px 10px 10px 10px;
}

.downArrow {
  margin: 50px 0;
  transition: transform 0.4s;
}

.downArrow:hover {
  transform: translate(0, 0.5em);
}

.myRecentWork {
  margin: 1.1em;
  padding: 0;
  display: grid;
  grid-template-columns: 1fr;
  gap: 1.2em;
  justify-items: center;
}

.myRecentWork hr {
  margin: 20px 0 60px 0;
}

.workTitle {
  margin-bottom: 0;
}

.workCard {
  border: solid 1px #d0d9d4;
  background-color: #ebf0ee;
  border-radius: 10px;
  flex-direction: column-reverse;
  align-items: flex-end;
  height: 474px;
  width: 100%;
  max-width: 475px;
  transition: transform 0.5s;
}

.cardInfo {
  border-radius: 10px;
  background-color: white;
  max-height: 50%;
  width: 100%;
  padding: 1em;
  gap: 0.5em;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.cardInfo h3 {
  font-size: 1.2em;
  margin: 0;
}

.cardInfo ul {
  max-width: 100%;
  list-style: none;
  padding: 0;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  gap: 8px;
}

.infoListItem {
  background-color: #ebf0ee;
  border-radius: 4px;
  padding: 8px 12px;
  text-align: center;
  font-family: 'Inter', sans-serif;
  font-weight: 600;
  font-size: 0.75em;
  line-height: 1em;
  transition: 0.5s;
}

.infoListItem:hover {
  background-color: #c6e6d8;
}

.button {
  box-sizing: border-box;
  background-color: #36b37f;
  width: 122px;
  height: 48px;
  border: none;
  border-radius: 4px;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-size: 17px;
  font-weight: 500;
  line-height: 6.4%;
  color: white;
  text-align: center;
  transition: transform 1s;
}

.button:hover {
  background-color: #36b37e;
  transform: scale(1.1);
}

.button:active {
  background-color: #008552;
}

.resumeButton {
  width: 159px;
  margin-bottom: 59px;
}

/* My Recent Work */
@media only screen and (min-width: 768px) {
  .separator {
    display: none;
  }

  .myRecentWork {
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(3, 1fr);
    grid-auto-flow: row;
    gap: 1.2em;
  }

  .myRecentWork h2 {
    grid-column: span 2;
    margin: 40px;
  }

  .workCard {
    max-width: none;
    height: 474px;
    flex-wrap: wrap;
  }

  .cardInfo {
    box-sizing: border-box;
    width: 100%;
    height: auto;
  }
}

@media (min-width: 900px) {
  .myRecentWork {
    justify-content: center;
    grid-template-columns: repeat(3, auto);
    grid-template-rows: auto auto auto;
    gap: 1.2em;
  }

  .myRecentWork h2 {
    grid-column: span 3;
  }

  .workCard {
    max-width: 18.45em;
    height: 474px;
    flex-wrap: wrap;
  }

  .cardInfo {
    box-sizing: border-box;
    width: 100%;
    height: auto;
  }
}

/* About Me Section */
.aboutMe {
  display: grid;
  grid-template-columns: 3;
  grid-template-rows: auto;
  gap: 24px;
  justify-items: center;
  align-items: center;
  background-image: url("images/illustration-\ about\ me-\ mobile.png");
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
}

.aboutMeCard {
  border: solid 1px #d0d9d4;
  background-color: #ebf0ee;
  border-radius: 10px 10px 10px 10px;
  flex-wrap: wrap;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 1em;
  height: 327px;
  width: 325px;
  transition: transform 0.5s;
}

.aboutMeCard img {
  height: 4em;
  width: 4em;
  background-color: white;
  padding: 15px;
  margin-bottom: 1em;
  border-radius: 50%;
}

.mediaContainer img:hover {
  transform: scale(1.4);
}

.aboutMeCard ul {
  list-style: none;
  padding: 0;
  margin: 0 0.5em;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  gap: 8px;
}

.aboutMeListItem {
  background-color: white;
  color: #36b37e;
  border-radius: 4px;
  padding: 8px 12px;
  text-align: center;
  font-family: 'Inter', sans-serif;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
}

@media (min-width: 768px) {
  .aboutMe {
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(3, 1fr);
    justify-content: center;
    background-image:
      url(./images/illustration-about\ me-1-desktop.png),
      url(./images/illustration-about-me-2-desktop.png);
    background-position: right 100px, center left;
    background-size: auto;
    padding-top: 8%;
    margin-bottom: 8%;
  }

  .aboutMe h2 {
    grid-column: span 3;
  }

  .aboutMe p {
    grid-column: span 3;
    max-width: 60%;
  }

  .aboutMe button {
    margin: 0;
    grid-column: span 3;
  }

  .aboutMeCard {
    max-width: 18.45em;
    height: 17.6em;
    gap: 1.2em;
  }

  .aboutMeCard img {
    margin: 0;
    padding: 0;
    height: 4em;
    width: 4em;
  }
}

.blue {
  color: #172b4d;
}

.green {
  color: #36b37e;
}

.contactContainer {
  background-image: url(./images/illustration-contact-form.svg);
  background-repeat: no-repeat;
  background-position: center;
  background-position-x: 100%;
  background-position-y: 642px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.contactContainer h2 {
  margin: 6.4%;
}

.contactForm {
  flex-direction: column;
  align-items: center;
  gap: 1.2em;
  margin-top: 34px;
}

.singleLineInput {
  box-sizing: border-box;
  width: 327px;
  height: 48px;
  padding: 15px 16px;
  border: 1px solid #d0d9d4;
  border-radius: 4px;
}

.singleLineInput::placeholder {
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 15px;
  line-height: 6.4%;
  color: #6b778c;
}

.commentArea {
  box-sizing: border-box;
  padding: 12px;
  width: 327px;
  height: 114px;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 15px;
  line-height: 6.4%;
  color: #091e42;
  border: 1px solid #60c095;
  border-radius: 4px;
}

.contactForm button {
  margin-bottom: 28px;
}

.contactContainer p {
  height: 189px;
  width: 375px;
  line-height: 32px;
  color: #42526e;
  margin: 0;
  margin-bottom: 147px;
}

@media (min-width: 768px) {
  .contactContainer {
    background-image:
      url(./images/illustration-1-contact-form-desktop.svg),
      url(./images/illustration-2-contact-form-desktop.svg),
      url(./images/contact\ form-illustratoin-3-desktop.svg);
    background-position: center left, 200px 400px, right 120px;
    background-repeat: no-repeat;
    background-size: auto;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    flex-wrap: wrap;
  }

  .contactContainer h2 {
    box-sizing: border-box;
    margin: 0;
    width: 25%;
    font-size: 1.5em;
  }

  .contactForm {
    width: 45%;
    padding: 1.2em;
    align-items: flex-start;
  }

  .singleLineInput {
    width: 100%;
  }

  .commentArea {
    width: 100%;
  }

  .contactContainer p {
    width: 100%;
    border-bottom: 1px solid #dfe1e6;
    margin: 0;
  }

  .contactContainer .mediaContainer {
    width: 100%;
    order: 1;
    padding: 1em;
  }
}

.flex {
  display: flex;
}

.workCard:hover,
.aboutMeCard:hover {
  transform: scale(1.3);
}

